[package]
name = "rodio_scheduler"
version = "0.2.0"
edition = "2024"
description = "A library for sample-perfect audio scheduling with rodio."
license = "MIT"
repository = "https://github.com/LinoBigatti/coop-editor/tree/master/rodio_scheduler"
readme = "README.md"
keywords = ["rodio", "audio", "scheduler", "scheduling"]
categories = ["multimedia::audio", "game-development"]

[dependencies]
rodio = "0.21.0"
time-graph = { version = "0.3.2", features = ["table"], optional = true }
multiversion = { version = "0.8.0", optional = true }

[features]
default = ["simd"]
simd = ["dep:multiversion"]
profiler = ["dep:time-graph"]

[[test]]
name = "unit_tests"
path = "tests/unit_tests.rs"

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"
